Fix word wrap on the descriptions

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 	width: 240px;
 	float: left;
 	margin: 10px;
+    word-wrap: break-word;
 }
 
 
